--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,13 +1,17 @@
 apply plugin: 'com.android.application'
-
+apply plugin: 'kotlin-android'
+ext {
+    geckoview_channel = "nightly"
+    geckoview_version = "80.0.20200716094032"
+}
 android {
-    compileSdkVersion 29
-    buildToolsVersion "29.0.3"
+    compileSdkVersion 30
+    buildToolsVersion "30.0.1"
 
     defaultConfig {
         applicationId "pw.pbdiary.sinabro.eleclibrary"
         minSdkVersion 15
-        targetSdkVersion 29
+        targetSdkVersion 30
         versionCode 1
         versionName "0.1"
         vectorDrawables.useSupportLibrary = true
@@ -24,6 +28,10 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+    compileOptions {
+        sourceCompatibility = 1.8
+        targetCompatibility = 1.8
+    }
     flavorDimensions 'api'
     productFlavors {
         api15 {
@@ -36,20 +44,11 @@ android {
         api18 {
             dimension 'api'
             minSdkVersion 18
-            applicationIdSuffix ".jb43"
+            applicationIdSuffix ".jb"
             versionCode 180001
             versionName "0.1_jb43"
-            ext {
-                geckoviewChannel = "nightly"
-                geckoviewVersion = "76.0.20200312093312"
-            }
         }
     }
-    compileOptions {
-        sourceCompatibility = 1.8
-        targetCompatibility = 1.8
-    }
-
 }
 
 dependencies {
@@ -57,10 +56,17 @@ dependencies {
 
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+    implementation 'androidx.preference:preference:1.1.0'
     testImplementation 'junit:junit:4.13'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
-    api18Implementation 'org.mozilla.geckoview:geckoview-nightly:76.0.20200312093312'
-    api15Implementation project(path: ':geckolibs-20160801004002')
+    api18Implementation 'org.mozilla.geckoview:geckoview-nightly:80.0.20200716094032'
     api15Implementation project(path: ':geckoview-20160801004002')
+    implementation 'com.google.android.material:material:1.1.0'
+    implementation "androidx.core:core-ktx:+"
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.0.0"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+}
+repositories {
+    mavenCentral()
 }
