--- a/app/.gitignore
+++ b/app/.gitignore
@@ -1,1 +1,10 @@
 /build
+/src/main/res/drawable-v24/ic_launcher_background.xml
+/src/main/res/drawable-v24/ic_launcher_foreground.xml
+/src/main/ic_launcher-playstore.png
+/src/main/res/mipmap-anydpi-v26/
+/src/main/res/mipmap-hdpi/
+/src/main/res/mipmap-mdpi/
+/src/main/res/mipmap-xhdpi/
+/src/main/res/mipmap-xxhdpi/
+/src/main/res/mipmap-xxxhdpi/
